syntax = "proto3";
import "google/protobuf/empty.proto";

package chatPackage;

service ChatService {
  rpc SignUp(SignUpRequest) returns (User) {};
  rpc SignIn(SignInRequest) returns (User) {};
  rpc SendMessage(MessageRequest) returns (google.protobuf.Empty) {};
  rpc UserStream(StreamRequest) returns (stream UserStreamResponse) {};
  rpc ChatStream(StreamRequest) returns (stream StreamMessage) {};
}

message SignUpRequest {
  SignInRequest credential = 1;
  string avatar_url = 2;
}

message SignInRequest {
  string username = 1;
  string password = 2;
}

message MessageRequest {
  string username = 1;
  int32 room_id = 2;
  string message = 3;
  string whisper = 4;
}

enum Status {
  UNKOWN = 0;
  ONLINE = 1;
  OFFLINE = 2;
}

message User {
  int32 id = 1;
  string username = 2;
  Status status = 3;
  string avatar = 4;
  repeated string rooms_id = 5;
}

message Room {
  int32 id = 1;
  string name = 2;
  repeated string users_id = 3;
  repeated StreamMessage messages = 4;
}

message UserStreamResponse {
  repeated User users = 1;
}


message StreamRequest {
  string username = 1;
}

message StreamMessage {
  int32 id = 1;
  int32 room_id = 2;
  string sender_name = 3;
  string sender_avatar = 4;
  string message = 5;
  string to = 6;
}