// Original file: proto/chat.proto


export interface StreamMessage {
  'id'?: (number);
  'senderName'?: (string);
  'senderAvatar'?: (string);
  'message'?: (string);
}

export interface StreamMessage__Output {
  'id'?: (number);
  'senderName'?: (string);
  'senderAvatar'?: (string);
  'message'?: (string);
}
